<resources>
    <string name="app_name">CarStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Загрузка…</string>
    <string name="advertisement">Подать объявление</string>
    <string name="title">Заголовок:</string>
    <string name="model">Модель машины:</string>
    <string name="city">Город:</string>
    <string name="price">Цена:</string>
    <string name="number">Номер:</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="update">Обновить</string>
    <string name="tenge"> тенге</string>
    <string name="empty">Пусто</string>
</resources>
